deploy/k8s/base/rebar-v2-redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rebar-redis-v2-ingress
spec:
  podSelector:
    matchLabels:
      app: rebar-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - rebar-v2-api
          - rebar-v2-preparing
          - rebar-v2-solving
          - rebar-v2-fitting
          - rebar-v2-baring
          - rebar-v2-validation
    ports:
    - protocol: TCP
      port: 6379
